objects/ssot__PartyPhilanthropicIndicator__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AttributedUserId__c</fullName>
        <label>Attributed User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DateCollected__c</fullName>
        <label>Date Collected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedValue__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Philanthropic Indicator Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndicatorType__c</fullName>
        <label>Indicator Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Indicator__c</fullName>
        <label>Indicator</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherSource__c</fullName>
        <label>Other Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyPhilanthropicOccurrenceId__c</fullName>
        <label>Party Philanthropic Occurrence</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedOrganizationId__c</fullName>
        <label>Related Organization</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceId__c</fullName>
        <label>Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceType__c</fullName>
        <label>Source Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658753489_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicIndicator_RelatedO_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicIndicator_RelatedO_rel</relationshipLabel>
        <relationshipName>rel_1731658753489_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658757622_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicIndicator_AccountI_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicIndicator_AccountI_rel</relationshipLabel>
        <relationshipName>rel_1731658757622_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658759021_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyPhilanthropicIndicator_SourceId_rel</label>
        <referenceTo>ssot__BusinessMilestone__dlm</referenceTo>
        <relationshipLabel>PartyPhilanthropicIndicator_SourceId_rel</relationshipLabel>
        <relationshipName>rel_1731658759021_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>